<resources>
    <string name="app_name">Hotelife</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="info_logo">info_logo</string>
    <string name="txt_register">txt_register</string>
    <string name="txt_name_h">txt_name_h</string>
    <string name="txt_name_admin">txt_name_admin</string>
    <string name="txt_name_phone" />
    <string name="txt_email_admin">.</string>
    <string name="btn_continue">btn_continue</string>
    <string name="txt_password" />
    <string name="verification_text">.</string>
    <string name="home">.</string>
    <string name="services">.</string>
    <string name="others">.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="country_array">
        <item>Greece</item>
        <item>United Kingdom</item>
        <item>Italy</item>
        <item>France</item>
        <item>Germany</item>
        <item>Turkey</item>
        <item>Poland</item>
        <item>India</item>
    </string-array>
</resources>
